Integer.valueOf should be better than new Integer